styles/styles.css
/* body {
    height: 300vh;
} */

header {
    background-color: var(--color-primary);
    position: fixed;
    left: 0;
    right: 0;
    top: 0;

    nav {
        display: flex;
        gap: 1.5rem;
        align-items: center;
        justify-content: right;
        width: 100%;
        padding: var(--spacing-s);

        @media (width > 799px) {
            padding-inline: var(--spacing-s);
            padding-block: 0;
        }

        .menu-icon {

            @media (width > 799px) {
                display: none;
            }
        }


        .nav-link,
        .button {
            display: none;

            @media (width > 799px) {
                display: flex;
            }
        }

        .button {

            @media (width > 799px) {

                &:hover {
                    background-color: var(--color-accent);
                    color: var(--color-primary);

                    &::after {
                        background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24'%3E%3Cpath fill='none' stroke='%23002544' stroke-linecap='round' stroke-linejoin='round' stroke-width='2' d='M12 8l-7 7M12 8l7 7'/%3E%3C/svg%3E");
                    }
                }
            }
        }

        button {
            background: none;
            border: none;
        }
    }

    &.open {
        position: sticky;
        inset: 0;
        background-color: var(--color-primary);
        height: 100vh;
        z-index: 10;

        nav {
            place-content: center;
            place-items: center;
            display: grid;
            grid-template-columns: 1fr min-content;
            grid-template-rows: min-content repeat(4, max-content);

            a {
                grid-column: span 2;

                &.dark-bg::after {
                    background: none;
                }

                &.button {
                    display: flex;
                }
            }

            .menu-icon {
                grid-column: 2/3;
            }

            button {
                svg {
                    path {
                        d: path('M6.575 7.975L1.675 12.875C1.49167 13.0583 1.25833 13.15 0.975 13.15C0.691667 13.15 0.458333 13.0583 0.275 12.875C0.0916663 12.6917 0 12.4583 0 12.175C0 11.8917 0.0916663 11.6583 0.275 11.475L5.175 6.575L0.275 1.675C0.0916663 1.49167 0 1.25833 0 0.975C0 0.691667 0.0916663 0.458333 0.275 0.275C0.458333 0.0916663 0.691667 0 0.975 0C1.25833 0 1.49167 0.0916663 1.675 0.275L6.575 5.175L11.475 0.275C11.6583 0.0916663 11.8917 0 12.175 0C12.4583 0 12.6917 0.0916663 12.875 0.275C13.0583 0.458333 13.15 0.691667 13.15 0.975C13.15 1.25833 13.0583 1.49167 12.875 1.675L7.975 6.575L12.875 11.475C13.0583 11.6583 13.15 11.8917 13.15 12.175C13.15 12.4583 13.0583 12.6917 12.875 12.875C12.6917 13.0583 12.4583 13.15 12.175 13.15C11.8917 13.15 11.6583 13.0583 11.475 12.875L6.575 7.975Z');
                    }
                }
            }

            .nav-link,
            .button {
                display: block;
            }
        }
    }
}

article {
    margin-top: var(--spacing-s);
}

h1 {
    font-weight: 300;
}

h2 {
    padding-inline: var(--spacing-s);
}

section.hero {
    background-image: url("../assets/img/heroImg.png");
    background-repeat: no-repeat;
    background-position: center;
    background-size: cover;
    color: var(--color-secondary);
    display: grid;

    height: 100vh;
    padding: 10rem var(--spacing-s) var(--spacing-m);
    margin: 0;

    display: grid;
    grid-template-rows: min-content 1fr min-content min-content min-content min-content min-content;
    align-items: end;

    @media (width > 799px) {
        grid-template-rows: repeat(7, min-content);
        align-content: end;

        background-image: url("../assets/img/backgroundImgTablet.png");
    }

    p {
        margin: 0;
    }

    h3 {
        max-width: 18rem;
    }
}


section.tentoonstellingen {

    @media (width > 799px) {
        padding-inline: var(--spacing-s);
    }

    a {
        padding-inline: var(--spacing-s);
    }

    article {
        height: 80vh;
        background-image: url(../assets/img/tentoonstelling1.png);
        background-repeat: no-repeat;
        background-size: cover;
        align-content: end;
        padding-bottom: var(--spacing-m);

        @media (width > 799px) {
            /* background-image: url("../assets/img/tentoonstellingTablet.png"); */
        }

        p,
        a {
            padding-inline: var(--spacing-s);
            width: 20rem;
            color: var(--color-secondary);
        }

        svg {
            path {
                stroke: var(--color-secondary);
            }
        }
    }
}


section.about-us {

    .horizontal-scroller-wrapper {

        display: flex;
        scroll-snap-type: x mandatory;
        gap: var(--spacing-s);
        overflow-y: hidden;
        overflow-x: scroll;
        padding-left: var(--spacing-s);
        scrollbar-width: none;

        article {
            background-color: blue;
            min-width: 18rem;
            aspect-ratio: 1/1;

            padding: var(--spacing-s);

            color: var(--color-secondary);

            display: flex;
            flex-direction: column;
            justify-content: center;

            background-repeat: no-repeat;
            background-size: cover;

            &:nth-of-type(1) {
                background-image: url(../assets/img/About1.png);
            }

            &:nth-of-type(2) {
                background-image: url(../assets/img/About2.png);
            }

            &:nth-of-type(3) {
                background-image: url(../assets/img/About3.png);
            }

        }
    }
}


section.plan-your-visit {
    form {
        padding-inline: var(--spacing-s);

        label {
            display: grid;
            grid-template-columns: max-content 1fr;
            gap: 0.25rem;
            margin-block: var(--spacing-m);

            span:nth-of-type(1) {
                grid-column: 1/2;
                grid-row: 1/2;
            }
            span:nth-of-type(2) {
                grid-column: 1/2;
                grid-row: 2/3;
            }

            .ticket-amount {
                grid-column: 2/3;
                grid-row: span 2;
                justify-self: end;

                transition: all var(--animation-duration);

                @media (any-pointer: fine) {
                &:hover {
                    scale: 1.05;
                }
            }
            }
        }

        button[type="submit"] {
            background-color: var(--color-primary);
            color: var(--color-secondary);
            padding: 1rem;
            border-radius: 100px;
            border: 0;
            display: flex;
            gap: 1.5rem;
            font-size: var(--font-size-s);

            transition: all var(--animation-duration);

            &::after {
            content: '';
            background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24'%3E%3Cpath fill='none' stroke='%23ffffff' stroke-linecap='round' stroke-linejoin='round' stroke-width='2' d='M12 8l-7 7M12 8l7 7'/%3E%3C/svg%3E");
            width: 1.2em;
            height: 1.2em;
            background-size: 100% 100%;
            display: block;
            transform: rotate(90deg);
            }

            @media (any-pointer: fine) {
                &:hover {
                    scale: 1.05;
                }
            }
        }
    }
}

